--- a/index.html
+++ b/index.html
@@ -8,7 +8,10 @@
 <body>
     <h1>May is awesome :)</h1>
     <footer>
-        Coded by Kwanta 
+        Coded by 
+        <a href="https://github.com/K-Bureechai" target="_blank">Kwanta</a> 
+        hosted on <a href="https://github.com/K-Bureechai/Summer" target="_blank">Github</a>
+        and website hosted on <a href="https://may-weather-app.netlify.app/" target="_blank">Netlify</a>
     </footer>
 </body>
 </html>
