--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <footer>
         Coded by 
         <a href="https://github.com/K-Bureechai" target="_blank">Kwanta</a> 
-        hosted on <a href="https://github.com/K-Bureechai/Summer" target="_blank">Github</a>
-        and website hosted on <a href="https://may-weather-app.netlify.app/" target="_blank">Netlify</a>
+        , is <a href="https://github.com/K-Bureechai/Summer" target="_blank">open-sourced on Github</a>
+        and <a href="https://may-weather-app.netlify.app/" target="_blank">hosted on Netlify</a>
     </footer>
 </body>
 </html>
