added header, main and update footer content

--- a/index.html
+++ b/index.html
@@ -1,17 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Weather App</title>
 </head>
+
 <body>
-    <h1>May is awesome :)</h1>
+    <header>
+        <form>
+            <input type="search" placeholder="Enter a city.." required />
+            <input type="submit" value="Search" />
+        </form>
+    </header>
+    <main>
+        <div>
+            <h1>Sydney</h1>
+            <p>Friday 06:38, broken clouds
+                <br />
+                Humidity: 77%, Wind: 9.77km/h
+            </p>
+        </div>
+        <div>
+            🌤️ 13°C
+        </div>
+    </main>
+
     <footer>
-        Coded by 
-        <a href="https://github.com/K-Bureechai" target="_blank">Kwanta</a> 
+        This project was coded by
+        <a href="https://github.com/K-Bureechai" target="_blank">Kwanta</a>
         , is <a href="https://github.com/K-Bureechai/Summer" target="_blank">open-sourced on Github</a>
         and <a href="https://may-weather-app.netlify.app/" target="_blank">hosted on Netlify</a>
     </footer>
 </body>
+
 </html>
