--- a/index.html
+++ b/index.html
@@ -4,35 +4,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
+    <link rel="stylesheet" href="src/style.css">
+
     <title>Weather App</title>
+
 </head>
 
 <body>
-    <header>
-        <form>
-            <input type="search" placeholder="Enter a city.." required />
-            <input type="submit" value="Search" />
-        </form>
-    </header>
-    <main>
-        <div>
-            <h1>Sydney</h1>
-            <p>Friday 06:38, broken clouds
-                <br />
-                Humidity: 77%, Wind: 9.77km/h
-            </p>
-        </div>
-        <div>
-            🌤️ 13°C
-        </div>
-    </main>
+    <div class="weather-app">
+        <header>
 
-    <footer>
-        This project was coded by
-        <a href="https://github.com/K-Bureechai" target="_blank">Kwanta</a>
-        , is <a href="https://github.com/K-Bureechai/Summer" target="_blank">open-sourced on Github</a>
-        and <a href="https://may-weather-app.netlify.app/" target="_blank">hosted on Netlify</a>
-    </footer>
+            <form class="submit-form">
+                <input type="search" placeholder="Enter a city.." required class="enter-a-city" />
+                <input type="submit" value="Search" class="submit-search" />
+            </form>
+
+        </header>
+        <main>
+            <div>
+                <h1>Sydney</h1>
+                <p>Friday 06:38, broken clouds
+                    <br />
+                    Humidity: <strong>77%</strong> , Wind: <strong>9.77km/h</strong>
+                </p>
+
+            </div>
+            <div class="temperature-display">
+                <span class="weather-icon">🌤️</span> <span class="temperature">13</span>
+                <span class="temperature-unit">°C</span>
+
+            </div>
+        </main>
+
+
+        <footer>
+            This project was coded by
+            <a href="https://github.com/K-Bureechai" target="_blank">Kwanta</a>
+            , is <a href="https://github.com/K-Bureechai/Summer" target="_blank">open-sourced on Github</a>
+            and <a href="https://may-weather-app.netlify.app/" target="_blank">hosted on Netlify</a>
+        </footer>
+    </div>
 </body>
 
 </html>
