added the search functionality using the API

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         </header>
         <main>
             <div>
-                <h1 id="city">Sydney</h1>
+                <h1 id="city"></h1>
                 <p>Friday 06:38, broken clouds
                     <br />
                     Humidity: <strong>77%</strong> , Wind: <strong>9.77km/h</strong>
@@ -35,7 +35,7 @@
 
             </div>
             <div class="temperature-display">
-                <span class="weather-icon">🌤️</span> <span class="temperature">13</span>
+                <span class="weather-icon">🌤️</span> <span class="temperature" id="temperature"></span>
                 <span class="temperature-unit">°C</span>
 
             </div>
