add description and humidity function from API

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         <main>
             <div>
                 <h1 id="city"></h1>
-                <p>Friday 06:38, broken clouds
+                <p>Friday 06:38, <span id="description"></span>
                     <br />
-                    Humidity: <strong>77%</strong> , Wind: <strong>9.77km/h</strong>
+                    Humidity: <strong id="humidity"></strong> , Wind: <strong>9.77km/h</strong>
                 </p>
 
             </div>
