injected more weather data

--- a/index.html
+++ b/index.html
@@ -28,9 +28,11 @@
         <main>
             <div>
                 <h1 id="city"></h1>
-                <p>Friday 06:38, <span id="description"></span>
+                <p class="weather-app-details">
+                    <span id="time"></span>
+                    <span id="description"></span>
                     <br />
-                    Humidity: <strong id="humidity"></strong> , Wind: <strong>9.77km/h</strong>
+                    Humidity: <strong id="humidity"></strong> , Wind: <strong id="wind-speed"></strong>
                 </p>
 
             </div>
