edit weather function

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <div>
                 <h1 id="city"></h1>
                 <p class="weather-app-details">
-                    <span id="time"></span>
+                    <span id="time"></span>,
                     <span id="description"></span>
                     <br />
                     Humidity: <strong id="humidity"></strong> , Wind: <strong id="wind-speed"></strong>
@@ -37,7 +37,7 @@
 
             </div>
             <div class="temperature-display">
-                <span class="weather-icon">🌤️</span> <span class="temperature" id="temperature"></span>
+                <div class="weather-icon">🌤️</span> <span class="temperature" id="temperature"></span>
                 <span class="temperature-unit">°C</span>
 
             </div>
