adjust css for weather icon and temperature

--- a/index.html
+++ b/index.html
@@ -37,7 +37,10 @@
 
             </div>
             <div class="temperature-display">
-                <div class="weather-icon">🌤️</span> <span class="temperature" id="temperature"></span>
+                
+                    <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
+                    class="weather-icon"/>
+                 <span class="temperature" id="temperature"></span>
                 <span class="temperature-unit">°C</span>
 
             </div>
