adjust CSS and injected weather icon's image

--- a/index.html
+++ b/index.html
@@ -37,11 +37,10 @@
 
             </div>
             <div class="temperature-display">
-                
-                    <img src="http://shecodes-assets.s3.amazonaws.com/api/weather/icons/rain-day.png"
-                    class="weather-icon"/>
-                 <span class="temperature" id="temperature"></span>
-                <span class="temperature-unit">°C</span>
+                <div id="icon"></div>
+                    
+                 <div class="temperature" id="temperature"></div>
+                <div class="temperature-unit">°C</div>
 
             </div>
         </main>
