--- a/index.html
+++ b/index.html
@@ -26,32 +26,96 @@
 
         </header>
         <main>
-            <div>
-                <h1 id="city"></h1>
-                <p class="weather-app-details">
-                    <span id="time"></span>,
-                    <span id="description"></span>
-                    <br />
-                    Humidity: <strong id="humidity"></strong> , Wind: <strong id="wind-speed"></strong>
-                </p>
+            <div class="weather-app-data">
+                <div>
+                    <h1 id="city"></h1>
+                    <p class="weather-app-details">
+                        <span id="time"></span>,
+                        <span id="description"></span>
+                        <br />
+                        Humidity: <strong id="humidity"></strong> , Wind: <strong id="wind-speed"></strong>
+                    </p>
+                </div>
+                <div class="temperature-display">
+                    <div id="icon"></div>
 
-            </div>
-            <div class="temperature-display">
-                <div id="icon"></div>
-                    
-                 <div class="temperature" id="temperature"></div>
-                <div class="temperature-unit">°C</div>
+                    <div class="temperature" id="temperature"></div>
 
+                    <div class="temperature-unit">°C</div>
+                </div>
             </div>
+            <div class="weather-forecast-element">
+                <div class="weather-forecast-day">
+                    <div class="weather-forecast-date">Fri</div>
+                    <div class="weather-forecast-icon"> ☀️ </div>
+                    <div class="weather-forecast-temperatures">
+                        <div class="weather-forecast-temperature">
+                             <strong>15°</strong>
+                        </div>
+                        <div class="weather-forecast-temperature">
+                            9°
+                        </div>
+                    </div>
+                </div>
+                <div class="weather-forecast-day">
+                    <div class="weather-forecast-date">Sat</div>
+                    <div class="weather-forecast-icon"> ☀️ </div>
+                    <div class="weather-forecast-temperatures">
+                        <div class="weather-forecast-temperature">
+                            <strong>15°</strong>
+                        </div>
+                        <div class="weather-forecast-temperature">
+                            9°
+                        </div>
+                    </div>
+                </div>
+                <div class="weather-forecast-day">
+                    <div class="weather-forecast-date">Sun</div>
+                    <div class="weather-forecast-icon"> ☀️ </div>
+                    <div class="weather-forecast-temperatures">
+                        <div class="weather-forecast-temperature">
+                            <strong>15°</strong>
+                        </div>
+                        <div class="weather-forecast-temperature">
+                            9°
+                        </div>
+                    </div>
+                </div>
+                <div class="weather-forecast-day">
+                    <div class="weather-forecast-date">Mon</div>
+                    <div class="weather-forecast-icon"> ☀️ </div>
+                    <div class="weather-forecast-temperatures">
+                        <div class="weather-forecast-temperature">
+                            <strong>15°</strong>
+                        </div>
+                        <div class="weather-forecast-temperature">
+                            9°
+                        </div>
+                    </div>
+                </div>
+                <div class="weather-forecast-day">
+                    <div class="weather-forecast-date">Tue</div>
+                    <div class="weather-forecast-icon"> ☀️ </div>
+                    <div class="weather-forecast-temperatures">
+                        <div class="weather-forecast-temperature">
+                            <strong>15°</strong>
+                        </div>
+                        <div class="weather-forecast-temperature">
+                            9°
+                        </div>
+                    </div>
+                </div>
+            </div>
+            
+
         </main>
-
-
         <footer>
             This project was coded by
             <a href="https://github.com/K-Bureechai" target="_blank">Kwanta</a>
             , is <a href="https://github.com/K-Bureechai/Summer" target="_blank">open-sourced on Github</a>
             and <a href="https://may-weather-app.netlify.app/" target="_blank">hosted on Netlify</a>
         </footer>
+
     </div>
     <script src="src/app.js"></script>
 </body>
